--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Michael Dean Lim</p>
+					<p class="text-name">Michael Dean</p>
 					<p class="text-title-company">Master Electrician</p>
 					<p class="text-title-company">Dean Elec-Tech, Electrical Contracting</p>
 				</div>
 				<div class="col">
-					<img src="Elec-tech Business Card.jpg" alt="Company Logo">
+					<img src="Elec-Tech Business Card.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
